--- a/_posts/events/2016-08-08-R-startup.markdown
+++ b/_posts/events/2016-08-08-R-startup.markdown
@@ -13,8 +13,9 @@ tagged:
 client: NIMH, Czech Republic
 people: hejtmy
 ---
-R startup
+Introduction to R
 ========
+This two to three hour course is aimed at those who have never programmed and never worked with R. We will get into basics of what is a variable and a function and how to do simple preprocessing and statistical analysis of movie data.
 
 What we will do
 -----------
