--- a/_events/2016/2016-08-08-R-startup.markdown
+++ b/_events/2016/2016-08-08-R-startup.markdown
@@ -18,27 +18,31 @@ What we will do
 -----------
 We will learn basics of programming in R. What is a variable, function, package etc. How to look at prepared data and how to read in your own data to make interesting analyses and get rid of Excel once and for all.
 
+You will need your own PC with wi-fi module and eduroam access or other internet accesse that NTK is providing. R works on Linux, Windows and Mac OS, possibly with some quirks that we will have to deal with as we go.
+
 What to do in advance?
 -----------
-Have your notebooks ready to do some R programming. That includes following steps
+Have your notebooks ready to do some R programming. That includes following steps:
 
 1. Download R from <https://cran.r-project.org/src/base/R-3/>
 
-2.  Install R and open it. Check if everything is fine by running following commands to check:
+2.  Install R and open it. Check if everything is fine by running following commands (just copy paste it one by one to the command line) to check:
 
     ~~~ r
-    install.packgages('dplyr')
+    install.packgages('dplyr') #installs package
 
-    library(dplyr)
+    library(dplyr) #loads the package
 
-    head(iris)
+    head(iris) #inspects head of a dataset that comes with R
 
-    iris %>% filter(Species == "virginica") %>% select(Sepal.Width, Species)
+    iris %>% filter(Species == "virginica") %>% select(Sepal.Width, Species) #filters dataset
 
-    iris %>% filter(Species == "virginica")  %>% summarise(mean = mean(Sepal.Width), sd = sd(Sepal.Width))
+    iris %>% filter(Species == "virginica")  %>% summarise(mean = mean(Sepal.Width), sd = sd(Sepal.Width)) #calculates summary stats on the filtered dataset
     ~~~
 3. If you have any trouble running above code, message somebody on [slack](https://lab-code.slack.com) in the #r-help channel
 
 4. Download and install [RStudio](https://www.rstudio.com/products/rstudio/)
 
-5. Check above commands if they run in the studio as well.
+5. Check if the above commands run in the RStudio as well.
+
+6. Wait :)
