--- a/_events/2016/2016-08-08-R-startup.markdown
+++ b/_events/2016/2016-08-08-R-startup.markdown
@@ -12,13 +12,12 @@ people: hejtmy
 calendar: https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=ODA3ZWxrYWpzaDM5YmtyY2JjcHVpYW84N28gbzQwNXU4anZsNTA0MGhvNXB1cWQ1MWMzOGtAZw&amp;tmsrc=o405u8jvl5040ho5puqd51c38k%40group.calendar.google.com
 github: https://github.com/lab-code/R-for-non-programmers
 ---
-This two to three hour course is aimed at those who have never programmed and never worked with R. We will get into basics of what is a variable and a function and do simple vector math, sequencing,  randomisation etc.
+
+This two to three hour course is aimed at those who have never programmed and never worked with R. We will get into basics of what is a variable and a function and do simple vector math, sequencing, randomisation etc.
 
 ## What we will do
 
-We will learn basics of programming in R. What is a variable, function, package etc. What variable types we have, how to work with vectors and functions and bunch of other stuff.
-
-You will need your own PC with wi-fi module and eduroam access or other internet access that NTK provides. R works on Linux, Windows and Mac OS, possibly with some quirks that we will have to deal with as we go.
+We will learn basics of programming in R. What is a variable and what types of variables we have etc. The major part is going to be how to work with vectors, how to do comparisons and bunch of other stuff. This is mainly preparatory session for the data.frames lesson that follows.
 
 ## What to do in advance?
 -----------
@@ -46,3 +45,7 @@ Have your notebooks ready to do some R programming. That includes following step
 5. Check if the above commands run in the RStudio as well.
 
 6. Wait :)
+
+## Important
+
+You will need your own PC with wi-fi module and eduroam access or other internet access that NTK provides. I can't stress that enough. there is no free Wi-fi in NTK. You either have to have an NTK account or need access to eduroam. If you are PhD sutdents, you should have euroam account provided by your university.
