--- a/_events/2016/2016-08-08-R-startup.markdown
+++ b/_events/2016/2016-08-08-R-startup.markdown
@@ -11,6 +11,7 @@ tagged:
 people: hejtmy
 calendar: https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=ODA3ZWxrYWpzaDM5YmtyY2JjcHVpYW84N28gbzQwNXU4anZsNTA0MGhvNXB1cWQ1MWMzOGtAZw&amp;tmsrc=o405u8jvl5040ho5puqd51c38k%40group.calendar.google.com
 github: https://github.com/lab-code/R-for-non-programmers
+iteration: 2
 ---
 
 This two to three hour course is aimed at those who have never programmed and never worked with R. We will get into basics of what is a variable and a function and do simple vector math, sequencing, randomisation etc.
