--- a/_events/2016/2016-08-08-R-startup.markdown
+++ b/_events/2016/2016-08-08-R-startup.markdown
@@ -3,7 +3,7 @@ layout: event
 title:  "R for non programmers I."
 meetingDate:  2016-08-16
 meetingPlace: NTK
-author: Lukáš Hejtmánek
+instructor: Lukáš Hejtmánek
 category: past
 img: 2016/R-beginners.jpg
 calendar:
