Adds better image

--- a/_events/2016/2016-09-08-GIT-NUDZ.markdown
+++ b/_events/2016/2016-09-08-GIT-NUDZ.markdown
@@ -5,7 +5,7 @@ meetingDate:  2016-09-27
 meetingPlace: NUDZ
 instructor: Michal Hocko
 category: upcoming
-img: 2016/git-branching.jpg
+img: 2016/git.png
 calendar:
 tagged: git
 people:
