--- a/_events/2016/2016-08-08-R-startup.markdown
+++ b/_events/2016/2016-08-08-R-startup.markdown
@@ -4,10 +4,8 @@ title:  "R for non programmers I."
 meetingDate:  2016-09-22
 meetingPlace: NTK
 instructor: Lukáš Hejtmánek
-category: upcoming
+category: past
 img: 2016/R-beginners.jpg
-calendar:
-tagged:
 people: hejtmy
 calendar: https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=dmk3bGY4aWF2MHZudGhqMzZzOHNyNTdsNzggbzQwNXU4anZsNTA0MGhvNXB1cWQ1MWMzOGtAZw&tmsrc=o405u8jvl5040ho5puqd51c38k%40group.calendar.google.com
 github: https://github.com/lab-code/R-for-non-programmers
